Fixed text and about-photo spacing, updated resume

--- a/style.css
+++ b/style.css
@@ -167,12 +167,6 @@ section {
     height: 80vh;
 }
 
-.section__pic-container {
-    display: flex;
-    height: 400px;
-    width: 400px;
-    margin: auto 0;
-}
 
 .section__text {
     align-self: center;
@@ -340,9 +334,11 @@ section {
 }
 
 .section__pic-container {
-    height: 400px;
+    display: flex;
+    height: 450px;
     width: 400px;
-    margin: auto 0;
+    margin-right: 2rem;
+    margin-top: 5rem;
 }
 
 /* EXPERIENCE SECTION */
